Fix text behind gradient

--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,7 @@ h5  { opacity: 0.78; filter: alpha(opacity=78); margin-bottom: 20px; font-weight
         background: transparent -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(0,0,0,0.4)) repeat scroll 0% 0%;
         background: transparent linear-gradient(rgba(255, 255, 255, 0), rgba(0,0,0,0.4)) repeat scroll 0% 0%;
     }
+    .card-image .card-title { z-index: 1 }
     .card-image img.activator:hover { opacity: 0.6; filter: alpha(opacity=60); } /* More natural card-reveal */
     .card-reveal { background-color: rgba(255,255,255,0.9); }
 
